# VideoTruthyPie

./: .gitignore  pyproject.toml
tests/: test_videotruthypie.py
videotruthypie/: main.py
